test/parser/compile_error/type_test.mj
program type_test

Integer a;

{
    void main() {}
}